--- a/TaskManger/Components/Shared/DeleteModal.razor
+++ b/TaskManger/Components/Shared/DeleteModal.razor
@@ -1,28 +1,18 @@
 ﻿<Modal @ref="ModalRef" Animated Closing="OnModalClosing">
-    <ModalContent Centered Size="ModalSize.Small">
-        <ModalHeader Class="alert-warning text-uppercase d-flex justify-content-center text-center">
-            <ModalTitle Class="text-center">
-                <Icon Name="IconName.ExclamationTriangle"></Icon>
-                Alerta
-            </ModalTitle>
-        </ModalHeader>
+    <ModalContent Centered Size="ModalSize.Default">        
         <ModalBody>
-            <AlertMessage>¿Quiere eliminar este regitro?</AlertMessage>
-            @if (!string.IsNullOrEmpty(OtherMessage))
-            {
-                <br />
-                <AlertDescription>@OtherMessage</AlertDescription>
-            }
+            <h2 class="text-center">¿Estás Seguro?</h2>
+            <br />
+            <p class="text-center">Quieres eliminar el registro... (@RecordName)</p>            
         </ModalBody>
         <ModalFooter>
-            <Button Color="Color.Danger" Size="Size.Small" Clicked="OnDelete">
+            <Button Color="Color.Primary" Size="Size.Small" Clicked="OnDelete">
                 <Icon Name="IconName.Check"></Icon>
-                <b>Sí, Eliminar</b>
+                <b>ACEPTAR</b>
             </Button>
 
-            <Button Color="Color.Secondary" Size="Size.Small" Clicked="Close">
-                <Icon Name="IconName.Times"></Icon>
-                <b>No, Cancelar</b>
+            <Button Background="Background.Transparent" Size="Size.Small" Clicked="Close">                
+                <b>CANCELAR</b>
             </Button>
         </ModalFooter>
     </ModalContent>
@@ -32,6 +22,7 @@
 @code {
     [Parameter] public EventCallback DeleteRecord { get; set; }
 
+    [Parameter] public string RecordName { get; set; }
     [Parameter] public string OtherMessage { get; set; }
 
 
